--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -24,3 +24,9 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+ main.container {
+  margin: 80px auto;
+  width: 450px;
+  background-color: white;
+ }
