Added tweet message box

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,14 +1,15 @@
 #nav-bar {
     top: 0;
     position: fixed;
-    background-color: #00a087;
+    background-color: #808000;
     height: 80px;
     width: 100vw;
     color: #e8fdff;
     padding-left: 2em;
     padding-right: 2em;
+    z-index: 999;
 
-}  
+}   
 
 #nav-bar .logo {
     float: left;
@@ -18,6 +19,6 @@
 
 #nav-bar .header {
     line-height: 80px; 
-    font-size: 200%;
+    font-size: 2em;
     margin-left: 10px;
 }
