--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -25,8 +25,10 @@ body {
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
 
- main.container {
-  margin: 80px auto;
-  width: 450px;
+ main {
+  position: relative;
+  margin: 0px auto;
+  padding-top: 100px;
+  width: 750px;
   background-color: white;
  }
