--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,7 +1,7 @@
 #nav-bar {
     top: 0;
     position: fixed;
-    background-color: #808000;
+    background-color:#ff7f50	;
     height: 80px;
     width: 100vw;
     color: #e8fdff;
