--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,9 +1,9 @@
-section {
+.new-tweet {
     position: relative;
     background-color: #eee;
     border-radius: 10px;
     margin: 5px 2em 30px 2em;
-    height: 160px;
+    height: 190px;
 }
 
 section h2 {
@@ -29,3 +29,4 @@ span.counter{
     float: right;
     margin-right: 20px
 }
+
